			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02q: *********************************

IMP: (06/30/05, GVG) First version of 3D manual.

BUG: (6/30/05, GVG) Exception in DesigRulesTab during initialization of selectedFoundry.

BUG: (06/30/05, SMR) Cell names can have spaces in them (Bug #419).
FIX: Disallow spaces in Cell.lowLevelPopulate().

IMP: (06/30/05, GVG) Check first if Java3D is available in the machine before opening jd3 class.

IMP: (06/29/05, GVG) 3D submenus in HelpMenu (3D view plus demo).
Added trim() in ManualViewer in case blanks are found after chapter name in toc.txt
Started 3D folder in manual.

BUG: (06/29/05, SMR) Cannot mention "bugzilla" in released version.
FIX: In ActivityLogger.java, removed mention of "bugzilla" for released versions.

IMP: (06/28/05, GVG) Reorganizing again JMF and Java3D classes to create different plugins

BUG: (06/29/05, SMR) Cross-library copy doesn't copy schematic when icon gets copied (Bug #408).
FIX: Made cross-library copy more sensible: "copy subcells" always forces "copy all related views",
     copies schematic if icon gets copied recursively.

************************* Version 8.02p: *********************************

BUG: (06/28/05, GVG) DRC resolution check for active arcs must be done before they are cropped.
FIX: Move resolution code before Quick.cropActiveArc() in checkArcInst.

BUG: (06/28/05, SMR) Autorouting reports arcs that it does not create (Bug #413).
FIX: In AutoStitch.runAutoStitch(), only ignore wires that are already directly connected.

BUG: (06/28/05, SMR) Pad frame generation handles "gap" incorrectly (Bug #412).
FIX: Cleaned-up code.  Also now use "cell" instead of "facet" in array file.

BUG: (06/27/05, SMR) "Select all" should not select the cell center because
     it is never desired, and often causes unexpected results.
FIX: Disallow selection of cell center in "select all".
